fix(walk-me): fixed annotation layer visibility with walkme enablement (#249)

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -561,3 +561,8 @@ tr.reactable-column-header th.reactable-header-sortable {
 .align-right {
   text-align: right;
 }
+
+#walkme-player {
+  z-index: 1 !important;
+  bottom: 30px !important;
+}
